# neuralgcm

./: README.md  conftest.py  pyproject.toml
.github/workflows/: ci-experimental.yml  ci-legacy.yml  publish-job.yml
docs/: checkpoint_modifications.ipynb  conf.py  data_model_intro.ipynb  data_preparation.ipynb  deepdive_into_models.ipynb  experimental.md  forced_parmeterized_coupled_l96.ipynb  index.md  inference_demo.ipynb  inference_model_api_intro.ipynb  layers_towers_transforms_tutorial.ipynb  learning_l96_demo.ipynb  model_api_intro.ipynb  model_vectorization_tutorial.ipynb  neuralgcm_datasets.ipynb  requirements.txt  simulation_state_components_intro.ipynb  transforms_tutorial.ipynb
neuralgcm/: __init__.py
neuralgcm/data/: tl63_stochastic_mini.pkl
neuralgcm/experimental/: api.py  checkpointing.py  coordinates.py  data_specs.py  diagnostics.py  dynamic_io.py  embeddings.py  embeddings_test.py  observation_operators.py  observation_operators_test.py  process_parameterizations.py  pytree_mappings.py  pytree_mappings_test.py  pytree_transforms.py  pytree_transforms_test.py  standard_layers.py  standard_layers_test.py  state_conversion.py  towers.py  towers_test.py  xarray_utils.py
neuralgcm/experimental/atmosphere/: diagnostics.py  diagnostics_test.py  equations.py  equations_test.py  fixers.py  fixers_test.py  idealized_states.py  idealized_states_test.py  interpolators.py  interpolators_test.py  observation_operators.py  observation_operators_test.py  parameterizations.py  state_conversion.py  transforms.py  transforms_test.py
neuralgcm/experimental/coordax/: __init__.py  coordinate_systems.py  coordinate_systems_test.py  core.py  fields.py  fields_test.py  named_axes.py  xarray.py  xarray_test.py
neuralgcm/experimental/core/: api.py  api_test.py  boundaries.py  boundaries_test.py  checkpointing.py  checkpointing_test.py  coordinates.py  coordinates_test.py  data_specs.py  data_specs_test.py  diagnostics.py  diagnostics_test.py  dynamic_io.py  equations.py  feature_transforms.py  feature_transforms_test.py  field_utils.py  field_utils_test.py  interpolators.py  interpolators_test.py  learned_transforms.py  learned_transforms_test.py  module_utils.py  module_utils_test.py  normalizations.py  normalizations_test.py  observation_operators.py  observation_operators_test.py  orographies.py  parallelism.py  parallelism_test.py  pytree_utils.py  pytree_utils_test.py  random_processes.py  random_processes_test.py  scales.py  scan_utils.py  scan_utils_test.py  spatial_filters.py  spatial_filters_test.py  (+19 more)
neuralgcm/experimental/couplers/: generic.py  generic_test.py
neuralgcm/experimental/inference/: dynamic_inputs.py  dynamic_inputs_test.py  runner.py  runner_test.py  streaming.py  streaming_test.py  timing.py  timing_test.py
neuralgcm/experimental/metrics/: aggregation.py  aggregation_test.py  base.py  binning.py  deterministic_losses.py  deterministic_metrics.py  deterministic_test.py  evaluators.py  evaluators_test.py  probabilistic_losses.py  probabilistic_metrics.py  probabilistic_test.py  scaling.py  scaling_test.py  weighting.py  weighting_test.py
neuralgcm/experimental/synthetic_learning_tasks/: plot_utils.py  plot_utils_test.py  run_synthetic_tasks.py  spherical_geometry_tasks.py  synthetic_tasks.py  synthetic_tasks_test.py  utils.py
neuralgcm/experimental/toy_model_examples/: data_model.py  data_model_test.py  lorenz96.py  lorenz96_test.py
neuralgcm/experimental/training/: checkpointing.py  data_loading.py  data_loading_test.py  model_calibrators.py  model_calibrators_test.py  train_utils.py  trainer.py  trainer_test.py
neuralgcm/experimental/xreader/: iterators.py  reader.py  stencils.py  stencils_test.py
neuralgcm/legacy/: forcings.py  model_builder.py  models_test.py  stochastic.py  stochastic_test.py  transforms.py
neuralgcm/reference_code/: metrics.py
