[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "neuralgcm",
    "neuralgcm.experimental",
    "neuralgcm.experimental.atmosphere",
    "neuralgcm.experimental.core",
    "neuralgcm.experimental.xreader",
    "neuralgcm.legacy",
]
package-data = {neuralgcm = ["data/*"]}

[project]
name = "neuralgcm"
description = "Neural General Circulation Models for Weather and Climate"
version = "1.2.2"  # keep in sync with __version__ in neuralgcm/__init__.py
authors = [
    {name = "Google LLC", email = "noreply@google.com"},
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "dinosaur @ git+https://github.com/neuralgcm/dinosaur.git",
    "dm-haiku",
    "gin-config",
    "jax",
    "jaxlib",
    "numpy",
    "optax",
    "pandas",
    "xarray",
]

[project.urls]
source = "https://github.com/neuralgcm/neuralgcm"
documentation = "https://neuralgcm.readthedocs.io"

[project.optional-dependencies]
tests = [
    "absl-py",
    "chex",
    "pytest",
]
experimental = [
    "coordax>=0.2.2",
    "einops",
    "etils",
    # TODO(shoyer): use pypi version when there is a newer release than 0.3.0
    "fiddle @ git+https://github.com/google/fiddle.git",
    # TODO(shoyer): use pypi version when there is a newer release than 0.12.1
    "flax @ git+https://github.com/google/flax.git",
    "grain",
    "jax-datetime @ git+https://github.com/google/jax-datetime.git",
    "jax-solar",
    "orbax",
    "treescope",
    "zarr>= 3.1.4",
    # require dev version of xarray until 2025.09.0 release
    "xarray @ git+https://github.com/pydata/xarray.git",
]