[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "neuralgcm",
    "neuralgcm.legacy",
]
package-data = {neuralgcm = ["data/*"]}

[project]
name = "neuralgcm"
description = "Neural General Circulation Models for Weather and Climate"
version = "1.2.3"  # keep in sync with __version__ in neuralgcm/__init__.py
authors = [
    {name = "Google LLC", email = "noreply@google.com"},
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "dinosaur @ git+https://github.com/neuralgcm/dinosaur.git",
    "dm-haiku",
    "gin-config",
    "jax",
    "jaxlib",
    "numpy",
    "optax",
    "pandas",
    "xarray",
]

[project.urls]
source = "https://github.com/neuralgcm/neuralgcm"
documentation = "https://neuralgcm.readthedocs.io"

[project.optional-dependencies]
tests = [
    "absl-py",
    "chex",
    "pytest",
]